# INFO-2-IUA-Proyecto-Juego

./: CMakeLists.txt  EjemploTDA2019.zpr  ProyectoINFO2-juego.zpr  README.md  comida.cpp  comida.h  main.cpp  personaje.cpp  personaje.h  vibora.cpp  vibora.h
Hola/: main.cpp  vibora.cpp  vibora.h
Le agregue un par de cosas noma/: CMakeLists.txt  main.cpp  vibora.cpp  vibora.h
por las dudas ultima version/: CMakeLists.txt  main.cpp  vibora.cpp
